--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
     
     /* Fonts */
     --font-heading: 'Playfair Display', serif;
-    --font-body: 'Lato', sans-serif;
+    --font-body: 'Inter', sans-serif;
 }
 
 /* --- 2. Base & Reset Styles --- */
