--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
     --card-bg-color: #ffffff;
     
     /* Fonts */
-    --font-heading: 'Playfair Display', serif;
+    --font-heading: 'Inter', sans-serif;
     --font-body: 'Inter', sans-serif;
 }
 
